# llm-agents

./: README.md  agent-starter.sh  config.yaml  pyproject.toml  react-agent-Containerfile  sample.env  streamlit-Containerfile  streamlit-starter.sh
rag/: Containerfile  README.md  app.py  rag_HR_policies.yaml  rag_customer_accounts.yaml  rag_endpoint.yaml  rag_product_details.yaml  rag_tool_service.yaml  requirements.txt  test_rag_endpoint.ipynb
rag/docs/HR_policies/: onboarding.md  policy.md
rag/docs/customer_accounts/: FinNova_Bank.md  MediCore_Systems.md  TechWave_Solutions.md
rag/docs/product_details/: AI_Optimizer.md  CloudForge_Migrate.md  CloudForge_Secure.md  DevOps_Accelerator.md  Kubernetes_Orchestrator_Pro.md  company.md
rag/vector_db/: standalone_milvus.yaml  vector_db_insert.ipynb
react_agent/: README.md  __init__.py  api.py  apispec.py  constants.py
react_agent/agent/: __init__.py
react_agent/common/: llm.py
react_agent/openshift/: README.md  configmap.yaml  deployment.yaml  route.yaml  service.yaml
react_agent/tools/: __init__.py  common.py  math.py
streamlit/: README.md  intro.py  util.py
streamlit/openshift/: README.md  configmap.yaml  deployment.yaml  route.yaml  service.yaml
streamlit/pages/: app.py
streamlit/static/markdown/: introduction.md
